Add relations users and tasks
